# terraform-provider

./: .goreleaser.yml  go.mod  index.md
.github/workflows/: release.yml
initial_setup/: Readme.md  pyproject.toml
initial_setup/src/: create_provider.py
